manifests/fedishark/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedishark
  namespace: fedishark
  labels:
    app: fedishark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fedishark
  template:
    metadata:
      labels:
        app: fedishark
    spec:
      containers:
        - name: nginx
          image: nginx:1.30-alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/
              readOnly: true
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: html
          configMap:
            name: fedishark-html
