manifests/fedishark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedishark
  namespace: fedishark
  labels:
    app: fedishark
  annotations:
    external-dns.kubernetes.io/hostname: www.fedishark.eu
    external-dns.kubernetes.io/target: jump.fedishark.eu
    external-dns.kubernetes.io/ttl: "3600"
spec:
  selector:
    app: fedishark
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
