manifests/fedishark/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fedishark
  namespace: fedishark
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fedishark.eu`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
      services:
        - name: fedishark
          port: 80
  tls:
    certResolver: letsencrypt
